# seL4-nix-utils

./: .envrc  .gitignore  README.md  flake.nix  overlay.nix  rust-toolchain.toml  treefmt.nix  treefmt.toml
.ci/: gen-workflow-files-v3.nu  gen-workflow-files.nu
.github/workflows/: nix.yaml  release.yaml
patches/: 0002-newlib-Fix-i386-libgloss-support.patch  camkes-python-no-future.patch  capdl-python-no-future.patch  microkit-lifetime-error.patch  musslibc-add-features.h-to-stdio_impl.h.patch  seL4-cmake-install-target-failure.patch  seL4-compile-musl-on-recent-gcc-1.patch  seL4-compile-musl-on-recent-gcc-2.patch  seL4-print-irqs.patch  seL4-qemu-v10.patch  seL4-riscv-toolchain-prefix.patch
pkgs/: camkes-deps.nix  camkes-tool.nix  capDL-tool.nix  concurrencytest.nix  fetch-google-repo-tool.nix  guardonce.nix  l4v-old.nix  l4v.nix  linux-vm.nix  microkit-sdk-bin.nix  microkit-sdk.nix  pyfdt.nix  pyoxidizer.nix  repo-tool-fetcher.nix  rust-seL4-package.nix  seL4-camkes-vm-examples.nix  seL4-deps.nix  seL4-kernel-loader.nix  seL4-kernel.nix  seL4-moritz-fork.nix  seL4-rust-targets.nix  seL4-rust-task.nix  seL4-test.nix  seL4.nix  xilinx-pmufw.nix
tutorial/: Cargo.toml  Makefile  serial_server.c  wordle.system
tutorial/.cargo/: config.toml
tutorial/client/: Cargo.toml
tutorial/client/src/: main.rs
tutorial/serial_server/: Cargo.toml
tutorial/serial_server/src/: main.rs
tutorial/wordle/: Cargo.toml
tutorial/wordle/src/: lib.rs
