[package]
name = "serial_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
sel4-microkit.workspace = true
sel4-microkit-driver-adapters.workspace = true
sel4-microkit-message.workspace = true
sel4-externally-shared.workspace = true
